--- a/dev/index.html
+++ b/dev/index.html
@@ -17,7 +17,8 @@
     <link rel="stylesheet" href="../css/custom.css">
     <link rel="stylesheet" href="../config/config.css">
     <link rel="stylesheet" href="../bower_components/css-spinners/css/spinner/spinner.css" type="text/css">
-    <link rel="stylesheet" href="../bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" type="text/css">
+    <link rel="stylesheet" href="../bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css"
+          type="text/css">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -60,8 +61,18 @@
                             compareDate:vm.search.dateTo:'before' |
                             attachments:vm.search.attachments |
                             orderBy:[(vm.reverse?'':'-')+'date', 'id'] |
-                            limitTo:1)"
+                            limitTo:20)"
                treatmentlist="vm.treatments" user="vm.user"></treatment>
+
+    <div class="col-xs-12 centered" ng-hide="vm.treatmentCount() == vm.treatments.length || !vm.treatments" ng-cloak>
+        <div class="panel">
+            <div class="panel-body">
+                <div class="btn-group">
+                    <a href class="btn" ng-class="'btn-default'" ng-click="vm.loadNext()" ng-bind="'Mehr laden'"></a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- Placed at the end of the document so the pages load faster -->
