restrict the scrolling on parent elements

--- a/dev/index.html
+++ b/dev/index.html
@@ -90,6 +90,7 @@
 
 <script type="text/javascript" src="../bower_components/select2/select2.js"></script>
 <script type="text/javascript" src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script type="text/javascript" src="../bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
 
 <script type="text/javascript" src="../bower_components/angular-select2/dist/angular-select2.min.js"></script>
 <script type="text/javascript" src='../bower_components/textAngular/dist/textAngular-rangy.min.js'></script>
@@ -116,6 +117,7 @@
 <script type="text/javascript" src="../js/directives/textblock-widget.directive.js"></script>
 <script type="text/javascript" src="../js/directives/type-and-preset.directive.js"></script>
 <script type="text/javascript" src="../js/directives/keyboard-focus.directive.js"></script>
+<script type="text/javascript" src="../js/directives/restricted-scroll.directive.js"></script>
 
 <script type="text/javascript" src="../js/services/advanced-search-widget.service.js"></script>
 <script type="text/javascript" src="../js/services/asterisk-search.service.js"></script>
