fixed preset replace widget bug

--- a/dev/index.html
+++ b/dev/index.html
@@ -59,15 +59,14 @@
                             compareDate:vm.search.dateFrom:'after' |
                             compareDate:vm.search.dateTo:'before' |
                             attachments:vm.search.attachments |
-                            orderBy:[(vm.reverse?'':'-')+'date', 'id'] |
-                            limitTo:20)"
+                            orderBy:[(vm.reverse?'':'-')+'date', 'id'])"
                treatmentlist="vm.treatments" user="::vm.user"></treatment>
 
     <div class="col-xs-12 centered" ng-hide="vm.treatmentCount() == vm.treatments.length || !vm.treatments" ng-cloak>
         <div class="panel">
             <div class="panel-body">
                 <div class="btn-group">
-                    <a href class="btn" ng-class="'btn-default'" ng-click="vm.loadNext()" ng-bind="'Mehr laden'"></a>
+                    <a href class="btn" ng-class="'btn-default'" ng-click="vm.loadNext()" ng-bind="vm.getNextCaption()"></a>
                 </div>
             </div>
         </div>
