--- a/js/preset/replace-preset-widget.tpl.html
+++ b/js/preset/replace-preset-widget.tpl.html
@@ -9,7 +9,7 @@
                 </div>
             </div>
             <div class="list-group">
-                <a class="list-group-item" href ng-repeat="preset in dc.presets" ng-click="dc.select(preset);">
+                <a class="list-group-item" href ng-repeat="preset in dc.presets" ng-click="dc.select(preset)">
                     {{preset.name}}
                 </a>
             </div>
