--- a/dev/index.html
+++ b/dev/index.html
@@ -86,6 +86,7 @@
 <script type="text/javascript" src="../bower_components/ngLocale/angular-locale_de-ch.js"></script>
 <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script type="text/javascript" src="../bower_components/angular-elastic/elastic.js"></script>
 
 <script type="text/javascript" src="../bower_components/select2/select2.js"></script>
 <script type="text/javascript" src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
