--- a/js/treatment/treatment.tpl.html
+++ b/js/treatment/treatment.tpl.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 treatment mandator-::{{treatment.mandator}}"
+<div class="col-xs-12 treatment mandator-{{::treatment.mandator}}"
      ng-class="::{secondary: !treatment.isMainTreatment, closed: treatment.closed || treatment.billed}" tabindex="-1">
 <div class="panel" ng-class="::treatment.type=='success' ? 'panel-success' : 'panel-default'">
 <div class="panel-heading clearfix">
