added title filter

--- a/dev/index.html
+++ b/dev/index.html
@@ -56,6 +56,7 @@
                             filter:vm.search.text |
                             filter:{subject:vm.search.subject} |
                             filter:{userToken:vm.search.user} |
+                            title:vm.search.title |
                             invoiceCase:vm.search.case |
                             compareDate:vm.search.dateFrom:'after' |
                             compareDate:vm.search.dateTo:'before' |
@@ -152,6 +153,7 @@
 <script type="text/javascript" src="../js/filters/compareDate.filter.js"></script>
 <script type="text/javascript" src="../js/filters/attachments.filter.js"></script>
 <script type="text/javascript" src="../js/filters/invoice-case.filter.js"></script>
+<script type="text/javascript" src="../js/filters/title.filter.js"></script>
 
 <script type="text/javascript" src="../js/config/spinner.config.js"></script>
 <script type="text/javascript" src="../js/config/textAngular.config.js"></script>
