--- a/html/index.html
+++ b/html/index.html
@@ -55,6 +55,7 @@
                             filter:vm.search.text |
                             filter:{subject:vm.search.subject} |
                             filter:{userToken:vm.search.user} |
+                            title:vm.search.title |
                             invoiceCase:vm.search.case |
                             compareDate:vm.search.dateFrom:'after' |
                             compareDate:vm.search.dateTo:'before' |
