removed paste debug info

--- a/dev/index.html
+++ b/dev/index.html
@@ -36,7 +36,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid" ng-class="[marginSetting, fontSetting]" ng-controller="MainController as vm" onpaste="onPaste()">
+<div class="container-fluid" ng-class="[marginSetting, fontSetting]" ng-controller="MainController as vm">
     <treatment-toolbar></treatment-toolbar>
 
     <title-settings-widget></title-settings-widget>
