added some numeric validation

--- a/dev/index.html
+++ b/dev/index.html
@@ -118,6 +118,7 @@
 <script type="text/javascript" src="../js/directives/type-and-preset.directive.js"></script>
 <script type="text/javascript" src="../js/directives/keyboard-focus.directive.js"></script>
 <script type="text/javascript" src="../js/directives/restricted-scroll.directive.js"></script>
+<script type="text/javascript" src="../js/directives/validation.directive.js"></script>
 
 <script type="text/javascript" src="../js/services/advanced-search-widget.service.js"></script>
 <script type="text/javascript" src="../js/services/asterisk-search.service.js"></script>
