--- a/dev/index.html
+++ b/dev/index.html
@@ -159,6 +159,7 @@
 <script type="text/javascript" src="../js/config/spinner.config.js"></script>
 <script type="text/javascript" src="../js/config/textAngular.config.js"></script>
 <script type="text/javascript" src="../js/config/http-header.config.js"></script>
+<script type="text/javascript" src="../js/config/datepicker.config.js"></script>
 <script type="text/javascript" src="../js/independent.js"></script>
 
 
