--- a/dev/index.html
+++ b/dev/index.html
@@ -91,6 +91,7 @@
 <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script type="text/javascript" src="../bower_components/angular-elastic/elastic.js"></script>
+<script type="text/javascript" src="../bower_components/angular-translate/angular-translate.min.js"></script>
 
 <script type="text/javascript" src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script type="text/javascript" src="../bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
@@ -162,6 +163,7 @@
 <script type="text/javascript" src="../js/config/textAngular.config.js"></script>
 <script type="text/javascript" src="../js/config/http-header.config.js"></script>
 <script type="text/javascript" src="../js/config/datepicker.config.js"></script>
+<script type="text/javascript" src="../js/config/translate.config.js"></script>
 <script type="text/javascript" src="../js/independent.js"></script>
 
 
