--- a/dev/index.html
+++ b/dev/index.html
@@ -163,8 +163,9 @@
 <script type="text/javascript" src="../js/config/textAngular.config.js"></script>
 <script type="text/javascript" src="../js/config/http-header.config.js"></script>
 <script type="text/javascript" src="../js/config/datepicker.config.js"></script>
-<script type="text/javascript" src="../js/config/translate.config.js"></script>
 <script type="text/javascript" src="../js/independent.js"></script>
+
+<script type="text/javascript" src="../config/translate.config.js"></script>
 
 
 </body>
