--- a/html/index.html
+++ b/html/index.html
@@ -79,6 +79,8 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="../config/config.js"></script>
 <script type="text/javascript" src='../build/app.min.js'></script>
+<script type="text/javascript" src="../config/translate.config.js"></script>
+
 
 </body>
 </html>
